# march-madness-2026

./: .gitignore  COMPETITION.md  Makefile  README.md  pyproject.toml  requirements.txt  streamlit_app.py
configs/: data.yaml  features.yaml  models.yaml  train.yaml
deploy/: bracket_center_payload.json
docs/: methodology.md  observability.md  results.md  validation.md
src/mm2026/: cli.py
src/mm2026/backtest/: __init__.py  bracket2025.py
src/mm2026/data/: ingest.py
src/mm2026/evaluation/: validate.py
src/mm2026/features/: build.py
src/mm2026/models/: pipeline.py  train.py
src/mm2026/observability/: __init__.py  app.py  explainability.py  feature_dictionary.py  matchup_explainer.py  publishable_bracket.py  report.py
src/mm2026/submission/: generate.py
src/mm2026/utils/: config.py  ids.py  io.py  metrics.py
tests/: test_bracket_backtest.py  test_config.py  test_feature_dictionary.py  test_features.py  test_ids.py  test_matchup_explainer.py  test_metrics.py  test_models_pipeline.py  test_observability.py  test_publishable_bracket.py  test_submission.py
